# KaliVibe

./: .env.example  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: ARCHITECTURE.md  CONTRIBUTING.md
src/: main.py
src/agent/: llm.py
src/config/: settings.py
src/mcp_server/: server.py
src/terminal/: session.py
src/tui/: __init__.py  console.py
